login and register pages
login and register pages with styles

--- a/app/styles.css
+++ b/app/styles.css
@@ -15,6 +15,11 @@
     --quinary: #5BC0BE;
 }
 
+a{
+    font-family: 'Merriweather Sans';
+    color: #3cefff;
+}
+
 body{
     height: 800px;
     width: 100%;
@@ -26,7 +31,7 @@ header{
     display: flex;
     align-items: center;
     flex-direction: column;
-    height: 350px;
+    height: 300px;
     width: 100%;
 }
 
@@ -61,3 +66,159 @@ main{
     font-size: 18px;
     color: var(--quaternary);
 }
+
+/*LOGIN PAGE*/
+
+.login-header{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    height: 200px;
+    width: 95%;
+    padding: 0 0 0 5%;
+}
+
+.login-main{
+    margin: auto;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+    width: 30%;
+}
+
+.login-register-info-title{
+    padding-bottom: 40px;
+    text-align: center;
+}
+
+.login-register-info-content{
+    text-align: center;
+}
+
+.login-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    color: var(--quaternary);
+    height: 200px;
+    width: 250px;
+}
+
+.login-register-info{
+    width: 250px;
+    height: 200px;
+}
+
+.login-register-info-title{
+    color: var(--quinary);
+}
+
+.login-register-info-content{
+    color: var(--quaternary);
+}
+
+.top-bar{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.top-bar-hero-text-1{
+    font-family: 'Oswald';
+    color: var(--quinary);
+}
+
+.top-bar-hero-text-2{
+    font-family: 'Oswald';
+    color: var(--quaternary);
+}
+
+/*animation*/
+.login-form-animation{
+    position: relative;
+  }
+  
+  input {
+    width: 250px;
+    color: white;
+    font-size: inherit;
+    font-family: inherit;
+    background-color: hsl(236, 32%, 26%);
+    padding: 0.35em 0.45em;
+    border: 1px solid transparent;
+    transition: background-color 0.3s ease-in-out;
+  }
+  
+  input:focus {
+    outline: none;
+  }
+  
+  input::placeholder {
+    color: hsla(0, 0%, 100%, 0.6);
+  }
+  
+  span {
+    position: absolute;
+    background-color: #3cefff;
+    transition: transform 0.5s ease;
+  }
+  
+  .bottom,
+  .top {
+    height: 1px;
+    left: 0;
+    right: 0;
+    transform: scaleX(0);
+  }
+  
+  .left,
+  .right {
+    width: 1px;
+    top: 0;
+    bottom: 0;
+    transform: scaleY(0);
+  }
+  
+  .bottom {
+    bottom: 0;
+    transform-origin: bottom right;
+  }
+  
+  input:focus ~ .bottom {
+    transform-origin: bottom left;
+    transform: scaleX(1);
+  }
+  
+  .right {
+    right: 0;
+    transform-origin: top right;
+  }
+  
+  input:focus ~ .right {
+    transform-origin: bottom right;
+    transform: scaleY(1);
+  }
+  
+  .top {
+    top: 0;
+    transform-origin: top left;
+  }
+  
+  input:focus ~ .top {
+    transform-origin: top right;
+    transform: scaleX(1);
+  }
+  
+  .left {
+    left: 0;
+    transform-origin: bottom left;
+  }
+  
+  input:focus ~ .left {
+    transform-origin: top left;
+    transform: scaleY(1);
+  }
